updates dummy notebook

--- a/clases.ipynb
+++ b/clases.ipynb
@@ -1,5 +1,14 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df3e60b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": ".venv",
