--- a/clases.ipynb
+++ b/clases.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "df3e60b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "58badbbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.load_dataset(\"tips\").sample(20).reset_index(drop=True).to_csv(\"tips.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
